--- a/index.html
+++ b/index.html
@@ -77,6 +77,42 @@
                 </li>
             </ul>
         </section>
+        <!-- Section4 -->
+        <section>
+            <h2>Our Portfolio</h2>
+            <ul>
+                <li>
+                    <img src="./images/section4_img1.jpg" alt="Banking App" width="360" height="300">
+                    <h3>Banking App</h3>
+                    <p>App</p>
+                </li>
+                <li>
+                    <img src="./images/section4_img2.jpg" alt="Cashless Payment" width="360" height="300">
+                    <h3>Cashless Payment</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/section4_img3.jpg" alt="Meditation App" width="360" height="300">
+                    <h3>Meditation App</h3>
+                    <p>App</p>
+                </li>
+                <li>
+                    <img src="./images/section4_img4.jpg" alt="Taxi Service" width="360" height="300">
+                    <h3>Taxi Service</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/section4_img5.jpg" alt="Screen Illustrations" width="360" height="300">
+                    <h3>Screen Illustrations</h3>
+                    <p>Design</p>
+                </li>
+                <li>
+                    <img src="./images/section4_img6.jpg" alt="Online Courses" width="360" height="300">
+                    <h3>Online Courses</h3>
+                    <p>Marketing</p>
+                </li>
+            </ul>
+        </section>
     </main>
     <footer>
         <a href="./index.html" target="_blank">WebStudio</a>
