--- a/index.html
+++ b/index.html
@@ -4,26 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="./index.html" target="_blank" class="link-logo">WEBSTUDIO</a>
-            <ul>
-                <li><a href="">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+    <header class="header">
+        <nav class="nav">
+            <a class="nav-logo" href="./index.html" target="_blank"> <span>WEB</span>STUDIO</a>
+            <ul class="nav-menu">
+                <li class="nav-item"><a class="nav-item-link" href="">Studio</a></li>
+                <li class="nav-item"><a class="nav-item-link" href="">Portfolio</a></li>
+                <li class="nav-item"><a class="nav-item-link" href="">Contacts</a></li>
             </ul>
         </nav>
         <!-- Adressa -->
-        <address>
-            <ul>
-                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                 <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <address class="address">
+            <ul class="address-menu">
+                 <li class="address-item"><a class="address-item-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                 <li class="address-item"><a class="address-item-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header> 
