goit-markup-hw-02

--- a/index.html
+++ b/index.html
@@ -30,98 +30,98 @@
     </header> 
     <main>
         <!-- Section1 -->
-        <section>
-            <h1>Effective Solutions for Your Business</h1>
-            <button type="button">Order Service</button>
+        <section class="section1">
+            <h1 class="section1-title">Effective Solutions for Your Business</h1>
+            <button class="section1-btn" type="button"><span class="section1-btn-text">Order Service</span></button>
         </section>
         <!-- Section2 -->
         <section>
-            <h2 hidden>/</h2>
-            <ul>
-                <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+            <h2 class="visually-hidden">/</h2>
+            <ul class="section2-menu">
+                <li class="section2-menu-item">
+                    <h3 class="section2-menu-title">Strategy</h3>
+                    <p class="section2-menu-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
-                <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                <li class="section2-menu-item">
+                    <h3 class="section2-menu-title">Punctuality</h3>
+                    <p class="section2-menu-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
-                <li>
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                <li class="section2-menu-item">
+                    <h3 class="section2-menu-title">Diligence</h3>
+                    <p class="section2-menu-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
-                <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                <li class="section2-menu-item">
+                    <h3 class="section2-menu-title">Technologies</h3>
+                    <p class="section2-menu-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
         </section>
         <!-- Section3 -->
-        <section>
-            <h2>Our Team</h2>
-            <ul>
-                <li>
-                    <img src="./images/section3_img1.jpg" alt="Mark Guerrero Product Designer" width="264" height="260">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+        <section class="section3">
+            <h2 class="section3-title">Our Team</h2>
+            <ul class="section3-menu">
+                <li class="section3-menu-item">
+                    <img src="./images/section3_img1.jpg" alt="Mark Guerrero Product Designer" width="264" height="260" class="section3-menu-foto">
+                    <h3 class="section3-menu-title">Mark Guerrero</h3>
+                    <p class="section3-menu-text">Product Designer</p>
                 </li>
-                <li>
-                    <img src="./images/section3_img2.jpg" alt="Tom Ford Frontend Developer" width="264" height="260">
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                <li class="section3-menu-item">
+                    <img src="./images/section3_img2.jpg" alt="Tom Ford Frontend Developer" width="264" height="260" class="section3-menu-foto">
+                    <h3 class="section3-menu-title">Tom Ford</h3>
+                    <p class="section3-menu-text">Frontend Developer</p>
                 </li>
-                <li>
-                    <img src="./images/section3_img3.jpg" alt="Camila Garcia Marketing" width="264" height="260">
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                <li class="section3-menu-item">
+                    <img src="./images/section3_img3.jpg" alt="Camila Garcia Marketing" width="264" height="260" class="section3-menu-foto">
+                    <h3 class="section3-menu-title">Camila Garcia</h3>
+                    <p class="section3-menu-text">Marketing</p>
                 </li>
-                <li>
-                    <img src="./images/section3_img4.jpg" alt="Daniel Wilson UI Designer" width="264" height="260">
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                <li class="section3-menu-item">
+                    <img src="./images/section3_img4.jpg" alt="Daniel Wilson UI Designer" width="264" height="260" class="section3-menu-foto">
+                    <h3 class="section3-menu-title">Daniel Wilson</h3>
+                    <p class="section3-menu-text">UI Designer</p>
                 </li>
             </ul>
         </section>
         <!-- Section4 -->
-        <section>
-            <h2>Our Portfolio</h2>
-            <ul>
-                <li>
-                    <img src="./images/section4_img1.jpg" alt="Banking App" width="360" height="300">
-                    <h3>Banking App</h3>
-                    <p>App</p>
+        <section class="section4">
+            <h2 class="section4-title">Our Portfolio</h2>
+            <ul class="section4-menu">
+                <li class="section4-menu-item">
+                    <img src="./images/section4_img1.jpg" alt="Banking App" width="360" height="300" class="section4-menu-foto">
+                    <h3 class="section4-menu-title">Banking App</h3>
+                    <p class="section4-menu-text">App</p>
                 </li>
-                <li>
-                    <img src="./images/section4_img2.jpg" alt="Cashless Payment" width="360" height="300">
-                    <h3>Cashless Payment</h3>
-                    <p>Marketing</p>
+                <li class="section4-menu-item">
+                    <img src="./images/section4_img2.jpg" alt="Cashless Payment" width="360" height="300" class="section4-menu-foto">
+                    <h3 class="section4-menu-title">Cashless Payment</h3>
+                    <p class="section4-menu-text">Marketing</p>
                 </li>
-                <li>
-                    <img src="./images/section4_img3.jpg" alt="Meditation App" width="360" height="300">
-                    <h3>Meditation App</h3>
-                    <p>App</p>
+                <li class="section4-menu-item">
+                    <img src="./images/section4_img3.jpg" alt="Meditation App" width="360" height="300" class="section4-menu-foto">
+                    <h3 class="section4-menu-title">Meditation App</h3>
+                    <p class="section4-menu-text">App</p>
                 </li>
-                <li>
-                    <img src="./images/section4_img4.jpg" alt="Taxi Service" width="360" height="300">
-                    <h3>Taxi Service</h3>
-                    <p>Marketing</p>
+                <li class="section4-menu-item">
+                    <img src="./images/section4_img4.jpg" alt="Taxi Service" width="360" height="300" class="section4-menu-foto">
+                    <h3 class="section4-menu-title">Taxi Service</h3>
+                    <p class="section4-menu-text">Marketing</p>
                 </li>
-                <li>
-                    <img src="./images/section4_img5.jpg" alt="Screen Illustrations" width="360" height="300">
-                    <h3>Screen Illustrations</h3>
-                    <p>Design</p>
+                <li class="section4-menu-item">
+                    <img src="./images/section4_img5.jpg" alt="Screen Illustrations" width="360" height="300" class="section4-menu-foto">
+                    <h3 class="section4-menu-title">Screen Illustrations</h3>
+                    <p class="section4-menu-text">Design</p>
                 </li>
-                <li>
-                    <img src="./images/section4_img6.jpg" alt="Online Courses" width="360" height="300">
-                    <h3>Online Courses</h3>
-                    <p>Marketing</p>
+                <li class="section4-menu-item">
+                    <img src="./images/section4_img6.jpg" alt="Online Courses" width="360" height="300" class="section4-menu-foto">
+                    <h3 class="section4-menu-title">Online Courses</h3>
+                    <p class="section4-menu-text">Marketing</p>
                 </li>
             </ul>
         </section>
     </main>
-    <footer>
-        <a href="./index.html" target="_blank" class="link-logo">WEBSTUDIO</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="footer">
+        <a class="footer-logo" href="./index.html" target="_blank"> <span>WEB</span>STUDIO</a>
+        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
 </html>
