add_goit-markup-hw-02

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
     <header class="header">
         <nav class="nav">
-            <a class="nav-logo" href="./index.html" target="_blank"> <span>WEB</span>STUDIO</a>
+            <a href="./index.html" target="_blank" class="nav-logo"> WEB<span class="nav-logo-storage">STUDIO</span></a>
             <ul class="nav-menu">
-                <li class="nav-item"><a class="nav-item-link" href="">Studio</a></li>
+                <li class="nav-item"><a class="nav-item-link" href="./index.html" target="_blank">Studio</a></li>
                 <li class="nav-item"><a class="nav-item-link" href="">Portfolio</a></li>
                 <li class="nav-item"><a class="nav-item-link" href="">Contacts</a></li>
             </ul>
@@ -29,98 +29,98 @@
         </address>
     </header> 
     <main>
-        <!-- Section1 -->
-        <section class="section1">
-            <h1 class="section1-title">Effective Solutions for Your Business</h1>
-            <button class="section1-btn" type="button"><span class="section1-btn-text">Order Service</span></button>
+        <!-- Section_one -->
+        <section class="section_one">
+            <h1 class="section_one-title">Effective Solutions for Your Business</h1>
+            <button class="section_one-btn" type="button">Order Service</button>
         </section>
         <!-- Section2 -->
-        <section>
+        <section class="section_two">
             <h2 class="visually-hidden">/</h2>
-            <ul class="section2-menu">
-                <li class="section2-menu-item">
-                    <h3 class="section2-menu-title">Strategy</h3>
-                    <p class="section2-menu-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+            <ul class="section_two-menu">
+                <li class="section_two-menu-item">
+                    <h3 class="section_two-menu-title">Strategy</h3>
+                    <p class="section_two-menu-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
-                <li class="section2-menu-item">
-                    <h3 class="section2-menu-title">Punctuality</h3>
-                    <p class="section2-menu-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                <li class="section_two-menu-item">
+                    <h3 class="section_two-menu-title">Punctuality</h3>
+                    <p class="section_two-menu-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
-                <li class="section2-menu-item">
-                    <h3 class="section2-menu-title">Diligence</h3>
-                    <p class="section2-menu-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                <li class="section_two-menu-item">
+                    <h3 class="section_two-menu-title">Diligence</h3>
+                    <p class="section_two-menu-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
-                <li class="section2-menu-item">
-                    <h3 class="section2-menu-title">Technologies</h3>
-                    <p class="section2-menu-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                <li class="section_two-menu-item">
+                    <h3 class="section_two-menu-title">Technologies</h3>
+                    <p class="section_two-menu-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
         </section>
         <!-- Section3 -->
-        <section class="section3">
-            <h2 class="section3-title">Our Team</h2>
-            <ul class="section3-menu">
-                <li class="section3-menu-item">
-                    <img src="./images/section3_img1.jpg" alt="Mark Guerrero Product Designer" width="264" height="260" class="section3-menu-foto">
-                    <h3 class="section3-menu-title">Mark Guerrero</h3>
-                    <p class="section3-menu-text">Product Designer</p>
+        <section class="section_three">
+            <h2 class="section_three-title">Our Team</h2>
+            <ul class="section_three-menu">
+                <li class="section_three-menu-item">
+                    <img src="./images/section3_img1.jpg" alt="Mark Guerrero Product Designer" width="264" height="260">
+                    <h3 class="section_three-menu-title">Mark Guerrero</h3>
+                    <p class="section_three-menu-text">Product Designer</p>
                 </li>
-                <li class="section3-menu-item">
-                    <img src="./images/section3_img2.jpg" alt="Tom Ford Frontend Developer" width="264" height="260" class="section3-menu-foto">
-                    <h3 class="section3-menu-title">Tom Ford</h3>
-                    <p class="section3-menu-text">Frontend Developer</p>
+                <li class="section_three-menu-item">
+                    <img src="./images/section3_img2.jpg" alt="Tom Ford Frontend Developer" width="264" height="260">
+                    <h3 class="section_three-menu-title">Tom Ford</h3>
+                    <p class="section_three-menu-text">Frontend Developer</p>
                 </li>
-                <li class="section3-menu-item">
-                    <img src="./images/section3_img3.jpg" alt="Camila Garcia Marketing" width="264" height="260" class="section3-menu-foto">
-                    <h3 class="section3-menu-title">Camila Garcia</h3>
-                    <p class="section3-menu-text">Marketing</p>
+                <li class="section_three-menu-item">
+                    <img src="./images/section3_img3.jpg" alt="Camila Garcia Marketing" width="264" height="260">
+                    <h3 class="section_three-menu-title">Camila Garcia</h3>
+                    <p class="section_three-menu-text">Marketing</p>
                 </li>
-                <li class="section3-menu-item">
-                    <img src="./images/section3_img4.jpg" alt="Daniel Wilson UI Designer" width="264" height="260" class="section3-menu-foto">
-                    <h3 class="section3-menu-title">Daniel Wilson</h3>
-                    <p class="section3-menu-text">UI Designer</p>
+                <li class="section_three-menu-item">
+                    <img src="./images/section3_img4.jpg" alt="Daniel Wilson UI Designer" width="264" height="260">
+                    <h3 class="section_three-menu-title">Daniel Wilson</h3>
+                    <p class="section_three-menu-text">UI Designer</p>
                 </li>
             </ul>
         </section>
         <!-- Section4 -->
-        <section class="section4">
-            <h2 class="section4-title">Our Portfolio</h2>
-            <ul class="section4-menu">
-                <li class="section4-menu-item">
-                    <img src="./images/section4_img1.jpg" alt="Banking App" width="360" height="300" class="section4-menu-foto">
-                    <h3 class="section4-menu-title">Banking App</h3>
-                    <p class="section4-menu-text">App</p>
+        <section class="section_four">
+            <h2 class="section_four-title">Our Portfolio</h2>
+            <ul class="section_four-menu">
+                <li class="section_four-menu-item">
+                    <img src="./images/section4_img1.jpg" alt="Banking App" width="360" height="300">
+                    <h3 class="section_four-menu-title">Banking App</h3>
+                    <p class="section_four-menu-text">App</p>
                 </li>
                 <li class="section4-menu-item">
-                    <img src="./images/section4_img2.jpg" alt="Cashless Payment" width="360" height="300" class="section4-menu-foto">
-                    <h3 class="section4-menu-title">Cashless Payment</h3>
-                    <p class="section4-menu-text">Marketing</p>
+                    <img src="./images/section4_img2.jpg" alt="Cashless Payment" width="360" height="300">
+                    <h3 class="section_four-menu-title">Cashless Payment</h3>
+                    <p class="section_four-menu-text">Marketing</p>
                 </li>
                 <li class="section4-menu-item">
-                    <img src="./images/section4_img3.jpg" alt="Meditation App" width="360" height="300" class="section4-menu-foto">
-                    <h3 class="section4-menu-title">Meditation App</h3>
-                    <p class="section4-menu-text">App</p>
+                    <img src="./images/section4_img3.jpg" alt="Meditation App" width="360" height="300">
+                    <h3 class="section_four-menu-title">Meditation App</h3>
+                    <p class="section_four-menu-text">App</p>
                 </li>
                 <li class="section4-menu-item">
-                    <img src="./images/section4_img4.jpg" alt="Taxi Service" width="360" height="300" class="section4-menu-foto">
-                    <h3 class="section4-menu-title">Taxi Service</h3>
-                    <p class="section4-menu-text">Marketing</p>
+                    <img src="./images/section4_img4.jpg" alt="Taxi Service" width="360" height="300">
+                    <h3 class="section_four-menu-title">Taxi Service</h3>
+                    <p class="section_four-menu-text">Marketing</p>
                 </li>
                 <li class="section4-menu-item">
-                    <img src="./images/section4_img5.jpg" alt="Screen Illustrations" width="360" height="300" class="section4-menu-foto">
-                    <h3 class="section4-menu-title">Screen Illustrations</h3>
-                    <p class="section4-menu-text">Design</p>
+                    <img src="./images/section4_img5.jpg" alt="Screen Illustrations" width="360" height="300">
+                    <h3 class="section_four-menu-title">Screen Illustrations</h3>
+                    <p class="section_four-menu-text">Design</p>
                 </li>
                 <li class="section4-menu-item">
-                    <img src="./images/section4_img6.jpg" alt="Online Courses" width="360" height="300" class="section4-menu-foto">
-                    <h3 class="section4-menu-title">Online Courses</h3>
-                    <p class="section4-menu-text">Marketing</p>
+                    <img src="./images/section4_img6.jpg" alt="Online Courses" width="360" height="300">
+                    <h3 class="section_four-menu-title">Online Courses</h3>
+                    <p class="section_four-menu-text">Marketing</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer class="footer">
-        <a class="footer-logo" href="./index.html" target="_blank"> <span>WEB</span>STUDIO</a>
+        <a href="./index.html" target="_blank" class="footer-logo">WEB<span class="footer-logo-storage">STUDIO</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
