--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header">
         <nav class="nav">
-            <a href="./index.html" target="_blank" class="nav-logo"> WEB<span class="nav-logo-storage">STUDIO</span></a>
+            <a href="./index.html" target="_blank" class="nav-logo"> WEB<span class="nav-logo-storage">Studio</span></a>
             <ul class="nav-menu">
                 <li class="nav-item"><a class="nav-item-link" href="./index.html" target="_blank">Studio</a></li>
                 <li class="nav-item"><a class="nav-item-link" href="">Portfolio</a></li>
@@ -120,7 +120,7 @@
         </section>
     </main>
     <footer class="footer">
-        <a href="./index.html" target="_blank" class="footer-logo">WEB<span class="footer-logo-storage">STUDIO</span></a>
+        <a href="./index.html" target="_blank" class="footer-logo">WEB<span class="footer-logo-storage">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
